# 2dgame

./: .gitignore  CMakeLists.txt  README.md
include/: mesh.h  music.h  shader.h  window.h
scripts/: activate.sh  addClass.py
shaders/: basic.fsh  basic.vsh  red.fsh
src/: main.cpp  mesh.cpp  music.cpp  shader.cpp  window.cpp
